# sniptube

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: config.py  database.py  main.py  models.py  queue.py  worker.py
api/app/routers/: clips.py  jobs.py  search.py  videos.py
api/app/tasks/: audio.py  clip.py  download.py  gif.py  redownload.py  trim.py
api/app/utils/: ffmpeg.py  ids.py  subtitles.py  validate.py  youtube.py
api/tests/: conftest.py  test_database.py  test_endpoints.py  test_fail_stale_jobs.py  test_jobs_active.py  test_search_unit.py  test_share_target.py  test_tasks.py  test_utils.py
mcp/: server.py  tools.py
ui/: app.js  index.html  manifest.json  style.css  sw.js
